# Project-Rocky

./: .gitignore  README.md  pyproject.toml  rocky.py  setup.sh
.agents/skills/code-refactoring/: SKILL.md
.agents/skills/code-refactoring/agents/: openai.yaml
.agents/skills/gemma4-skills/: SKILL.md
.agents/skills/gemma4-skills/agents/: openai.yaml
datasets/: semantic-memories.md
rocky/: __init__.py  agent.py  config.py  conversation.py  events.py  llm.py  session.py  trace.py  tracing.py  utils.py
rocky/memory/: compaction.py  db.py  emotion.py  manager.py  monologue.py  policy.py  trigger.py
rocky/prompts/: extraction_system.txt  memory_router_system.txt  monologue_system.txt  recall_episodic_system.txt  recall_semantic_system.txt  summary_system.txt  system_prompt.txt
rocky/tools/: manager.py  registry.py
rocky/tui/: __init__.py  app.py  voice.py
rocky/voice/: __init__.py  audio_io.py  config.py  session.py  stt.py  tts.py
tests/: test_rocky.py  test_tui_voice.py
